HIVE-5755 - Fix hadoop2 execution environment Milestone 1 (Vikram Dixit K via Brock Noland)
git-svn-id: https://svn.apache.org/repos/asf/hive/trunk@1546440 13f79535-47bb-0310-9956-ffa450edef68